a11y, fix canvas overflow

--- a/main.css
+++ b/main.css
@@ -38,7 +38,7 @@ body {
     width: 100%;
     max-width: 1920px;
     margin: auto;
-    overflow-x: visible;
+    overflow-x: hidden;
     background-color: #fafafa;
 }
 
@@ -58,25 +58,7 @@ h2 {
     font-size: 0.85em;
 }
 
-header {
-    width: 100%;
-    min-height: 70px;
-    background-color: #f5f5f5;
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
-    -webkit-box-shadow: 0 1px 10px rgba(0, 0, 0, 0.1);
-            box-shadow: 0 1px 10px rgba(0, 0, 0, 0.1);
-}
-header h1 {
-    width: 10%;
-}
+
 table,
 tr,
 td {
@@ -159,7 +141,9 @@ input[type=submit], input[type=color], input[type=button] {
 }
 
 .center {
-    min-height: 80vh;
+    min-height: 70vh;
+    width: 100%;
+    max-width: 1920px;
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
@@ -169,6 +153,7 @@ input[type=submit], input[type=color], input[type=button] {
     -webkit-box-align: center;
         -ms-flex-align: center;
             align-items: center;
+    overflow: auto;
 }
 
 .hide-text {
@@ -298,7 +283,28 @@ input[type="color"]::-webkit-color-swatch {
     margin: auto;
     border-radius: 3px;
 }
-
+.footer {
+    padding: 1em 0;
+}
+.header {
+    width: 100%;
+    min-height: 10vh;
+    background-color: #f5f5f5;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-shadow: 0 1px 10px rgba(0, 0, 0, 0.1);
+            box-shadow: 0 1px 10px rgba(0, 0, 0, 0.1);
+}
+.header h1 {
+    width: 10%;
+}
 @media screen and (max-width: 500px) {
     input {
         min-width: 72px;
@@ -316,7 +322,7 @@ input[type="color"]::-webkit-color-swatch {
 }
 
 @media screen and (max-width: 600px) {
-    header {
+    .header {
         -webkit-box-orient: vertical;
         -webkit-box-direction: normal;
             -ms-flex-direction: column;
@@ -325,12 +331,18 @@ input[type="color"]::-webkit-color-swatch {
             flex-wrap: wrap;
     }
 
-    header h1 {
+    .header h1 {
         padding: 0.5em 0;
         width: 100%;
     }
 
-    header .settings {
+    .header .settings {
         width: 100%;
+    }
+}
+
+@media screen and (min-width:1440px) {
+    body{
+        font-size: 16px;
     }
 }
